precision & bounding box to add states
