# src/resources/State.py
@@ -1,5 +1,5 @@
-from random import randint
-
+from .helper import fill_optional_fields
+from .Territory import Territory
 class State:
     def __init__(self, state_id,name, territories, color):
         self.state_id = state_id
@@ -8,21 +8,9 @@ class State:
         self.name = name
     
     @staticmethod
-    def from_dict(json_dict):
-        print('received color : ', json_dict['color'])
-        try:
-            json_dict['color']
-        #throw when no color OR color not hexable
-        except KeyError:
-            #random hex color
-            json_dict['color'] = ('000000'+hex(randint(0, 16**6))[2:])[-6:]
-        try:
-            json_dict['state_id']
-        except KeyError:
-            json_dict['state_id'] = None
-        try :
-            json_dict['name']
-        except KeyError :
-            json_dict['name'] = None
-        return State(json_dict['state_id'], json_dict['name'], json_dict['territories'], json_dict['color'])
+    def from_dict(json_dict, precision_levels):
+        # Name and state id do not have to be defined
+        json_dict = fill_optional_fields(json_dict, ['name', 'state_id'])
+        territories = [Territory.from_dict(territory_dict, precision_levels=precision_levels) for territory_dict in json_dict['territories']]
+        return State(json_dict['state_id'], json_dict['name'], territories, json_dict['color'])
     
